# Compile-Principle

./: .gitignore  .gitmodules  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
project/: .clang-format  CMakeLists.txt  Makefile  hello.koopa
project/.github/workflows/: ci.yml
project/debug/: hello.asm  hello.koopa  logic.asm
project/include/: CMakeLists.txt  ast.hpp  backend.hpp  ir_builder.hpp  koopa.h  type.hpp
project/include/Log/: log.cppm  log.hpp
project/include/backend/: backend.cppm  backend.hpp  koopawrapper.cppm  koopawrapper.hpp
project/include/ir/: ast.cppm  ast.hpp  ir_builder.cppm  ir_builder.hpp  symbol_table.cppm  symbol_table.hpp  type.cppm  type.hpp
project/scripts/: test_runner.py
project/src/: CMakeLists.txt  ast.cpp  backend.cpp  main.cpp  sysy.lx  sysy.y
project/src/backend/: backend.cpp
project/src/frontend/: sysy.lx  sysy.y
project/src/ir/: ast.cpp  codegen.cpp
project/tests/: hello.c
